--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/ui": "^4.0",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
-        "symfony/postmark-mailer": "^6.1"
+        "symfony/postmark-mailer": "^6.1",
+        "tymon/jwt-auth": "2.2"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
